tdf#133853 Large spreadsheets have 16385 columns instead of 16384

MAXROW_JUMBO/MAXCOL_JUMBO should be max - 1, similarly to
MAXROW/MAXCOL.
Since f6064b13586aa8681907b69e4f43643251f9b803.

Change-Id: I3d300e916b9584a2231f39bec5a044bd82c81752
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100777
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit 8f53858381e0cd6a3391c4ce8a097cdafa9c8df0)